css/momobot.css
html,

body {
  height: 100%;
  width: 100%;
}
body {
  font-family: 'Bubblegum Sans', cursive;
}
.strokeme {
	text-shadow: #f7acc0 0px 0px 10px,   #f7acc0 0px 0px 10px,   #f7acc0 0px 0px 10px,
			  	 #f7acc0 0px 0px 10px,   #f7acc0 0px 0px 10px,   #f7acc0 0px 0px 10px;
    -webkit-font-smoothing: antialiased;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Bubblegum Sans', cursive;
}

header {
  position: relative;
  max-width: 100%;
  height: auto;
  width: auto;

  text-align: center;
  color: white;
}
header .header-content {
  position: relative;
  text-align: left;
  padding: 100px 15px 100px;
  width: 100%;
}
header .header-content .header-content-inner h1 {
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 0;
}

body {
     background: #ffd1dc;
}

.wrap {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     overflow: hidden;
}

#ball {
     width: 80vh;
     height: 80vh;
     background-image: url('../img/momo_small.png');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;

     border-radius: 10%;
     position: absolute;
     left: 100%;
     top: 100%;

     pointer-events: none;
}


@media (min-width: 768px) {
  header {
    min-height: 100%;
  }
  header .header-content {
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    padding: 0 50px;
  }
  header .header-content .header-content-inner {
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
  }
  header .header-content .header-content-inner h1 {
    font-size: 12vh;
  }
  header .header-content .header-content-inner p {
    font-size: 18px;
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (max-width: 768px) {
  #ball {
       width: 0px;
       height: 0px;
       background-image: url('../img/momo_small.png');
       -webkit-background-size: cover;
       -moz-background-size: cover;
       background-size: cover;
       -o-background-size: cover;

       border-radius: 10%;
       position: absolute;
       left: 100%;
       top: 100%;

       pointer-events: none;
  }

  header {
    min-height: 100%;
    background-position: middle;
    background-image: url('../img/background_mobile.png');

    position: relative;
    max-width: 100%;
    height: auto;
    width: auto;
  }
  header .header-content {
    position: relative;
    text-align: center;
    padding: 100px 15px 100px;
    width: 100%;
  }
  header .header-content .header-content-inner h1 {
    font-size: 12vw;
    font-weight: 700;
    margin-top: 0;
    margin-bottom: 0;
  }
}

